...
    
    @IBAction func registerClicked(_ sender: Any) {
        Auth.auth().createUser(withEmail: registerEmail.text!, password: registerPass.text!) { user, error in // attempt to register new user
            if error == nil { // proceed if account WAS successfully created
                Auth.auth().signIn(withEmail: self.registerEmail.text!, password: self.registerPass.text!) { user, error in // attempt to sign in the newly registered user
                    if let error = error, user == nil { // display error if sign in was NOT successful
                        let alert = UIAlertController(title: "Sign In Failed", message: error.localizedDescription, preferredStyle: .alert)
                        alert.addAction(UIAlertAction(title: "OK", style: .default))
                        self.present(alert, animated: true, completion: nil)
                    }
                    else { // proceed if sign in WAS successful
                        Auth.auth().currentUser?.sendEmailVerification { (error) in // send verification email and begin timer on 5-second interval until email is verified
                            self.emailVerificationTimer = Timer.scheduledTimer(timeInterval: 5, target: self, selector: #selector(self.checkEmailValidation), userInfo: nil, repeats: true)
                        }
                    }
                }
            }
            else { // display error if registration was NOT successful
                let alert = UIAlertController(title: "Registration Failed", message: error!.localizedDescription, preferredStyle: .alert)
                alert.addAction(UIAlertAction(title: "OK", style: .default))
                self.present(alert, animated: true, completion: nil)
            }
        }
    }
    
...
